# flip-card

./: Cargo.toml  README.md
flip-card_firmware/: Cargo.toml
flip-card_firmware/src/: main.rs
fluid_sim_crate/src/: lib.rs
kicad-pcb/: LIS2DH12TR.kicad_sym  ML2020_G1A.STEP  PQFN50P200X200100-12N.kicad_mod  README.md  RP2350_60QFN_minimal.SLDASM  RP2350_60QFN_minimal.kicad_prl  RP2350_60QFN_minimal.kicad_pro  RP2350_60QFN_minimal.kicad_sch  RP2350_60QFN_minimal.kicad_sch-bak  fp-info-cache  fp-lib-table  led_array.kicad_sch  sym-lib-table  user_symbols.kicad_sym
kicad-pcb/Production files/: RP2350_60QFN_minimal-all-pos.csv  RP2350_60QFN_minimal-all-pos.xlsx  flip-card_BOM_purchase.csv  flip-card_BOM_purchase.xlsx
kicad-pcb/RP2350_60QFN_minimal.pretty/: L_pol_2016.kicad_mod
kicad-pcb/flip-card_Gerber/: RP2350_60QFN_minimal-B_Cu.gbr  RP2350_60QFN_minimal-B_Mask.gbr  RP2350_60QFN_minimal-B_Paste.gbr  RP2350_60QFN_minimal-B_Silkscreen.gbr  RP2350_60QFN_minimal-Edge_Cuts.gbr  RP2350_60QFN_minimal-F_Cu.gbr  RP2350_60QFN_minimal-F_Mask.gbr  RP2350_60QFN_minimal-F_Paste.gbr  RP2350_60QFN_minimal-F_Silkscreen.gbr  RP2350_60QFN_minimal-NPTH.drl  RP2350_60QFN_minimal-PTH.drl
kicad-pcb/user_footprints.pretty/: BatteryHolder_Custom.kicad_mod  BatteryHolder_Renata_SMTU2032-LF_1x2032.kicad_mod  C_0402_1005Metric_small_pads.kicad_mod  LED_0603_1608Metric.kicad_mod  TestPoint_THTPad_1.0x1.0mm_Drill0.5mm.kicad_mod
sim_display/: Cargo.toml  index.html
sim_display/src/: main.rs
src/: main.rs
