[package]
name = "sim_display"
version = "0.1.0"
edition = "2024"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
yew = { git = "https://github.com/yewstack/yew.git", rev = "f0b182d39179a5ad8e086a022ffcf25a09a615b6", features = [
    "csr",
] }
fluid_sim = { path = "../fluid_sim" }

[dependencies.web-sys]
version = "0.3"
features = [
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
]
